Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
Windows 7, MSVC 2010, 64bit
-
7c89d44d95c1c91f77aca3359cd8964a354fc41c,2d68c8ee8d28556eb40eb576d30b64fdac9b388d
Description
Windows: QStyleSheetStyle autotest fails:
FAIL! : tst_QStyleSheetStyle::focusColors() 'testForColors(image, QColor(0xff, 0x00, 0x84))' returned FALSE. (QPushButton did not contain text color #ff0084, using style QWindowsVistaStyle) .\tst_qstylesheetstyle.cpp(792) : failure location FAIL! : tst_QStyleSheetStyle::hoverColors() 'testForColors(image, QColor(0xff, 0x00, 0x84))' returned FALSE. (QPushButton did not contain text color #ff0084) .\tst_qstylesheetstyle.cpp(858) : failure location FAIL! : tst_QStyleSheetStyle::task232085_spinBoxLineEditBg() 'testForColors(image, QColor(0xe8, 0xff, 0x66))' returned FALSE. (QSpinBox did not contain background color #e8ff66, using style QWindowsVistaStyle) .\tst_qstylesheetstyle.cpp(1568) : failure location
Remember to enable the test in CI after it has been fixed.
Attachments
Issue Links
- is required for
-
QTBUG-24203 Qt 5.0 - Windows: Fix tests
-
- Closed
-
- relates to
-
QTBUG-66911 QLineEdit background is not inherited from parent's explicitly set palette
-
- Reported
-